<resources>
    <string name="app_name">الشحن المختصر</string>
    <string name="card">أدخل رقم البطاقة</string>
    <string name="recharge">شحن الرصيد</string>
    <string name="inquire_balance">إستعلام عن الرصيد</string>
    <string name="contact_me">اتصل بي</string>
    <string name="settings">إعدادات</string>
    <string name="idnumber">رقم الهوية :</string>
    <string name="wohcharging">طريقة الشحن :</string>
    <string name="network">الشبكة :</string>
    <string name="viewlive">العرض المباشر</string>
    <string name="viewcode">اظهر الكود</string>
    <string name="settings_icon">الإعدادات</string>
    <string name="save">حفظ</string>
    <string name="noneNetwork">لم تحدد نوع الشريحة</string>
    <string name="noneIDumber">لا يوجد رقم هوية</string>
    <string name="CardNumShort">رقم البطاقة قصير جداً</string>
    <string name="noneCardNum">لا يوجد رقم بطاقة</string>
    <string name="IDNumIncorrect">رقم الهوية غير صحيح</string>
</resources>
